--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="count_total">总计：</string>
     <string name="count_money">￥%s</string>
     <string name="count_goods">去结算</string>
+    <string name="affirm_order">确认订单</string>
+    <string name="select_address">选择收货地址</string>
 </resources>
