--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="count_money">￥%s</string>
     <string name="count_goods">去结算</string>
     <string name="affirm_order">确认订单</string>
+    <string name="all_order">全部订单</string>
     <string name="select_address">选择收货地址</string>
 </resources>
